fixing all the broken stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 find_package(Boost REQUIRED COMPONENTS system chrono)
 find_package(Threads REQUIRED)
-if(ENABLE_COVERAGE_MATCHES ON)
+if(ENABLE_COVERAGE MATCHES ON)
   include(CodeCoverage)
   APPEND_COVERAGE_COMPILER_FLAGS()
 endif()
 
 add_subdirectory(src)
+add_subdirectory(test)
